--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
-logging.level.org.springframework.web: DEBUG
+logging.level:
+  org.springframework.web: DEBUG
+  org.springframework.web.multipart.support: DEBUG
 spring:
   http:
     multipart:
