--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
             <version>2.7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
