--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
-logging.level:
-  org.springframework.web: DEBUG
-  org.springframework.web.multipart.support: DEBUG
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+  file: resttemplate.log
+  level:
+    org.springframework.web: DEBUG
+    org.springframework.web.multipart.support: DEBUG
 spring:
   http:
     multipart:
