--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.1.RELEASE</version>
+        <version>1.5.9.RELEASE</version>
     </parent>
 
     <properties>
@@ -21,6 +21,7 @@
         <maven-compiler-plugin.version>3.6.2</maven-compiler-plugin.version>
         <org.mapstruct.version>1.2.0.Final</org.mapstruct.version>
         <lombok.version>1.16.14</lombok.version>
+        <spring-cloud-starter-stream-rabbit.version>1.3.2.RELEASE</spring-cloud-starter-stream-rabbit.version>
     </properties>
 
     <dependencies>
@@ -32,6 +33,25 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+            <version>${spring-cloud-starter-stream-rabbit.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+            <version>${spring-cloud-starter-stream-rabbit.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-test-support</artifactId>
+            <version>${spring-cloud-starter-stream-rabbit.version}</version>
             <scope>test</scope>
         </dependency>
 
